WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241164
text-align: match-parent on root handles direction incorrectly
https://bugs.webkit.org/show_bug.cgi?id=241164
Summary
text-align: match-parent on root handles direction incorrectly
Kiet Ho
Reported
2022-05-31 17:15:39 PDT
Failing WPT test:
https://wpt.fyi/results/css/css-text/text-align/text-align-match-parent-root-rtl.html?label=master&label=experimental&aligned&q=text-align-match-parent-root-rtl.html
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2022-05-31 19:48:48 PDT
We do use the direction of the parent, which is effectively why it's wrong for the WPT:
https://webkit-search.igalia.com/webkit/rev/00d01db2338b1568d39aa439334f39f0353d0b00/Source/WebCore/style/StyleBuilderConverter.h#617-622
There's no parent in the WPT, so it should just behave like `text-align: start`.
Kiet Ho
Comment 2
2022-05-31 19:51:18 PDT
(In reply to Tim Nguyen (:ntim) from
comment #1
)
> We do use the direction of the parent, which is effectively why it's wrong > for the WPT: >
https://webkit-search.igalia.com/webkit/rev/
> 00d01db2338b1568d39aa439334f39f0353d0b00/Source/WebCore/style/ > StyleBuilderConverter.h#617-622 > > There's no parent in the WPT, so it should just behave like `text-align: > start`.
I see what you mean now - I didn't want to give this a generic "failing WPT test" title, but I also didn't do any digging into the root cause, so I just named it according to my best guess.
Tim Nguyen (:ntim)
Comment 3
2022-06-01 05:51:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1208
EWS
Comment 4
2022-06-01 22:06:16 PDT
Committed
r295120
(
251211@main
): <
https://commits.webkit.org/251211@main
> Reviewed commits have been landed. Closing PR #1208 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2022-06-01 22:07:15 PDT
<
rdar://problem/94266878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug